--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -27,11 +27,11 @@
         <!--<local:PasswordBoxDemo />-->
         <!--<local:FieldsDemo />-->
         <!--<local:GroupBoxDemo />-->
-        <local:ComboBoxDemo />
+        <!--<local:ComboBoxDemo />-->
         <!--<local:ScrollViewerDemo />-->
         <!--<local:PopupDemo />-->
         <!--<local:SliderDemo />-->
-        <!--<local:ListsDemo />-->
+        <local:ListsDemo />
     </Grid>
 
 
