--- a/CookPopularControl/Themes/ListBoxStyle.xaml
+++ b/CookPopularControl/Themes/ListBoxStyle.xaml
@@ -11,9 +11,11 @@
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="2" />
         <Setter Property="attached:SelectorAttached.SelectorItemType" Value="Default" />
         <Setter Property="attached:SelectorAttached.ItemHeight" Value="30" />
-        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="Transparent" />
-        <Setter Property="attached:SelectorAttached.ItemMouseOverBackground" Value="{DynamicResource PrimaryColorTheme}" />
+        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="{DynamicResource PrimaryColorTheme}" />
+        <Setter Property="attached:SelectorAttached.ItemMouseOverBackground" Value="{DynamicResource ButtonBaseMouseOverBackground}" />
+        <Setter Property="attached:SelectorAttached.ItemSelectedBackground" Value="{DynamicResource ButtonBasePressBackground}" />
         <Setter Property="ripple:RippleAssist.IsDisabled" Value="False" />
+        <Setter Property="ripple:RippleAssist.Feedback" Value="#FFFFFF" />
     </Style>
 
     <Style x:Key="ListBoxCheckBoxStyle" TargetType="{x:Type ListBox}" BasedOn="{StaticResource DefaultListBoxStyle}">
