--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -32,6 +32,7 @@
         <!--<local:PopupDemo />-->
         <!--<local:SliderDemo />-->
         <!--<local:ListsDemo />-->
+        <local:QRCodeControlDemo />
     </Grid>
 
 
